--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Lunari-esque Greeter Bot",
+  "name": "Lunari-esque-Greeter-Bot",
   "version": "1.0.0",
   "description": "A Discord Bot created for the express purpose of greeting new server members, so that Lunari doesn't have to",
   "main": "app.js",
